# template-react

./: .bazelrc  MODULE.bazel  README.md  buildbuddy.yaml
app/: BUILD.bazel  package-lock.json
website/: .gitignore  BUILD.bazel  package-lock.json
